# HelloProj

./: CMakeLists.txt  Dockerfile  README.md  hello.cpp
.github/workflows/: CD.yml  CI.yml  cmake-single-platform.yml
cmake/: HelloProjConfig.h.in
include/basic/: messages.h
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  messages.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
